# crypto

./: crypto.cabal  stack.yaml
app/: Main.hs
src/Crypto/: Scrooge.hs  Transaction.hs
