name:                crypto
version:             0.1.0
synopsis:            Initial crypto experimental
description:         Please see README.md
homepage:            https://github.com/githubuser/crypto#readme
license:             BSD3
license-file:        LICENSE
author:              Pierre Radermecker
maintainer:          pierrer@pi3r.be
copyright:           2016 pradermecker
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Crypto.Scrooge
  build-depends:         base >= 3.7 && < 5
                       , bytestring >= 0.10
                       , cryptonite
                       , hashable
  default-language:    Haskell2010

executable crypto-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , crypto
  default-language:    Haskell2010

test-suite crypto-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , crypto
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/crypto
